@@ -1,3 +1,8 @@
+2004-09-24  Andrew Haley  <aph@redhat.com>
+
+	* decl.c (check_local_unnamed_variable): Always use the PARM_DECL
+	for a slot if it's of pointer type.
+
 2004-09-14  Tom Tromey  <tromey@redhat.com>
 
 	* class.c (make_class_data): Correctly initialize "state" field.
